# OMNI-SYS

./: .env  .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  start-kap-project.sh
backend/: Dockerfile.backend  db.sqlite3  logging_config.yaml  logging_filter.py  logging_utils.py  manage.py  requirements.txt  schema.py
backend/api/: admin.py  apps.py  filters.py  models.py  pagination.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_relationship_created_at.py
backend/audit_logging/: config.yaml  utils.py
backend/authentification/: models.py  serializers.py  urls.py  views.py
backend/authentification/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/backend/communication/: package.xml  setup.py
backend/backend/communication/interfaces/: CMakeLists.txt  package.xml
backend/backend/communication/interfaces/msg/: GenericMessage.msg
backend/backend/communication/interfaces/srv/: SyncRequest.srv
backend/backend/communication/models/: medical_device.py  robot.py
backend/backend/communication/nodes/: human.py  main.py  medical_device.py  robot.py  root_protocol.py  system_simulator.py
backend/backend/communication/protocols/: root_protocol.py
backend/env/: pyvenv.cfg
backend/mqtt_backend/: comm_node_manager.py  comm_node_manager_v1.py  main.py  receiver.py  send.py
backend/mqtt_backend/core/: base_node.py  protocol_router.py
backend/mqtt_backend/core/handlers/: dicom_handler.py  hl7_handler.py
backend/mqtt_backend/models/: message_schema.py
backend/mqtt_backend/objects/: human_interface.py  medical_device.py  robot.py
backend/mqtt_backend/remote/: receiver.py  remote_base_node.py  remote_send.py
backend/mqtt_backend/utils/: dicom_generator.py  hl7_generator.py  logger.py  mqtt_logger.py
backend/object_management/: abstract_object_factory.py  database_connector.py  schema.py
backend/users/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
capacity_planning/: storage_estimation.py
env/: pyvenv.cfg
frontend/: .env  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  api.js  constants.js
frontend/src/components/: Form.jsx  LoginForm.jsx  ProtectedRoute.jsx  RegistrationForm.jsx
frontend/src/components/admin/: CreateObjectForms.jsx  CreateRelationshipForm.jsx  CreateUserForms.jsx  EditObjectForm.jsx  EditUserForm.jsx  ObjectManagement.jsx  RelationshipForm.jsx  RelationshipManagement.jsx  UserManagement.jsx
frontend/src/components/auth/: LoginForm.jsx  ProtectedRoute.jsx  RegistrationForm.jsx
frontend/src/components/graph/: GraphVisualization.jsx
frontend/src/components/layout/: Header.jsx
frontend/src/components/settings/: ProfileSettings.jsx
frontend/src/components/ui/: card.jsx  (+7 more)
frontend/src/hooks/: manageHospitalData.jsx  use-toast.js  useAuth.jsx  useHospitalData.jsx
frontend/src/lib/: utils.js
frontend/src/pages/: AdminDashboard.jsx  AgentDashboard.jsx  Home.jsx  Login.jsx  NotFound.jsx  Register.jsx
frontend/src/styles/: Home.css  LoginForm.css  RegistrationForm.css
scripts/: backup_db.sh
