[tool.poetry]
name = "omni-sys"
version = "0.1.0"
description = ""
authors = ["Jer Roy Tan <ge48hac@mytum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

asgiref = "^3.8.1"
django = "^5.2.1"
django-cors-headers = "^4.7.0"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
pyjwt = "^2.9.0"
pytz = "^2025.2"
sqlparse = "^0.5.3"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
paho-mqtt = "^2.1.0"
hl7 = "^0.4.5"
pydicom = "^3.0.1"
hl7apy = "^1.3.5"
pyyaml = "^6.0.2"
django-filter = "^25.1"
redis = "^6.2.0"
celery = "^5.5.3"
django-redis = "^5.4.0"
requests = "^2.32.4"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
