<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_pkg</name>
  <version>0.1.0</version>
  <description>Omnidirectional communication system for ROS 2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rosbridge_server</depend>
  <depend>rosbridge_msgs</depend>
  <depend>rosbridge_library</depend>
  <depend>python-socketio</depend>
  <depend>interfaces</depend>
  
  <exec_depend>python3-hl7</exec_depend>
  <exec_depend>python3-pydicom</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>